# tngin

./: .gitmodules  CMakeLists.txt  README.md
include/tngin/: engine.h  service_locator.h
include/tngin/input/: input_manager.h
include/tngin/platform/: entry_point.h  game.h  window.h
include/tngin/rendering/: camera.h  graphic_engine.h  graphics_transforms.h  graphics_types.h  graphics_utils.h  renderer.h  texture.h
shaders/: basic.frag  basic.vert
src/: engine.cpp
src/input/: input_manager.cpp
src/platform/: game.cpp  glfw_window.cpp  glfw_window.h  platform_window.cpp  platform_window.h
src/rendering/Graphics/: graphics_transforms.cpp  graphics_types.cpp  graphics_types.h  graphics_utils.cpp  graphics_utils.h  texture.cpp  tngin_camera.cpp  tngin_camera.h  tngin_graphics.cpp  tngin_graphics.h
src/rendering/ogl/: ogl_renderer.cpp  ogl_renderer.h
src/rendering/vulkan/: vulkan_initializers.cpp  vulkan_initializers.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_utilities.cpp  vulkan_utilities.h
